# rai-rai-rai-raku-raku-discord-bot

./: .gitignore  Cargo.toml  README.md  button_test.js  go.mod  go.sum  main.go  package-lock.json  package.json  parrot.js  rai_rai_raku_raku.js  rai_rai_raku_raku.py  send_a_announcement  send_a_announcement.js  test.js  token.json  token.txt  tsconfig.json  url.txt
src/: command-handler.js  command-handler.ts  commands.rs  main.js  main.js.map  main.rs  main.ts  tester.js  tester.js.map  tester.ts  utilities.js  utilities.js.map  utilities.ts
src/commands/: annoying.js  annoying.js.map  annoying.ts  names.js  names.js.map  names.ts  spam.js  spam.js.map  spam.ts
