[package]
name = "rai-rai-raku-raku"
version = "0.1.0"
edition = "2021"
default-run = "rai-rai-raku-raku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking"] }
scraper = "0.14.0"
serde = "1.0.160"
serde_json = "1.0.95"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.24.2", features = ["full"] }
